--- a/shifts.html
+++ b/shifts.html
@@ -24,8 +24,37 @@
 			<div style="width:600px; float:left;">
 			<h2 align="center"> Thursday, November 30, 2017 </h2>
 			<div class="shiftarea">
-			<div class="button2" style="width:600px">
-				9:30am-12:30pm | Admissions
+			<div class="button2">
+				<h3>9:30am-12:30pm | Admissions </h3>
+				<div class="avail"> 2 Shifts Available </div>
+			</div>
+			<div class="button2">
+				<h3>9:30am-12:30pm | Timekeeper </h3>
+				<div class="loc"> Mark Tennant </div>
+				<div class="avail"> 1 Shifts Available </div>
+			</div>
+			<div class="button2">
+				<h3>10:00am-1:00pm | Field Marshal</h3>
+				<div class="loc"> Blairmore </div>
+				<div class="fill"> Shifts Filled </div>
+			</div>
+						<div class="button2">
+				<h3>10:00am-1:00pm | Field Marshal</h3>
+				<div class="loc"> Uptown Orthodontics </div>
+				<div class="avail"> 2 Shifts Available </div>
+			</div>
+			<div class="button2">
+				<h3>9:30am-12:30pm | Timekeeper </h3>
+				<div class="loc"> Cliff Wright </div>
+				<div class="avail"> 1 Shifts Available </div>
+			</div>
+			<div class="button2">
+				<h3>9:45am-12:45pm | Headquarters </h3>
+				<div class="fill"> Shifts Filled </div>
+			</div>
+			<div class="button2">
+				<h3>9:45am-12:45pm | Headquarters </h3>
+				<div class="fill"> Shifts Filled </div>
 			</div>
 			</div>
 			</div>
