--- a/shifts.html
+++ b/shifts.html
@@ -31,7 +31,7 @@
 			<div class="button2">
 				<h3>9:30am-12:30pm | Timekeeper </h3>
 				<div class="loc"> Mark Tennant </div>
-				<div class="avail"> 1 Shifts Available </div>
+				<div class="avail"> 1 Shift Available </div>
 			</div>
 			<div class="button2">
 				<h3>10:00am-1:00pm | Field Marshal</h3>
@@ -46,7 +46,7 @@
 			<div class="button2">
 				<h3>9:30am-12:30pm | Timekeeper </h3>
 				<div class="loc"> Cliff Wright </div>
-				<div class="avail"> 1 Shifts Available </div>
+				<div class="avail"> 1 Shift Available </div>
 			</div>
 			<div class="button2">
 				<h3>9:45am-12:45pm | Headquarters </h3>
@@ -81,7 +81,6 @@
        
       </div>
 	 
-      </div>
 
 
 	<div id="ftr">
