--- a/signUp.html
+++ b/signUp.html
@@ -40,30 +40,30 @@
 			</div>
   			<div class="col-sm-4">
 				<h1>Sign Up Today!</h1>
-				<form>
+				<form >
 					<div class="form-group">
     					<label for="pwd">First Name:</label>
-    					<input type="name" class="form-control" id="firstName">
+    					<input type="name" class="form-control" name ="firstName">
   					</div>
 					<div class="form-group">
     					<label for="pwd">Last Name:</label>
-    					<input type="name" class="form-control" id="lastName">
+    					<input type="name" class="form-control" name ="lastName">
   					</div>
 					<div class="form-group">
     					<label for="email">Email address:</label>
-    					<input type="email" class="form-control" id="email">
+    					<input type="email" class="form-control" name ="email">
   					</div>
 					<div class="form-group">
     					<label for="usrname">Username:</label>
-    					<input type="username" class="form-control" id="usrname">
+    					<input type="username" class="form-control" name ="usrname">
   					</div>
 					<div class="form-group">
     					<label for="pwd">Password:</label>
-    					<input type="password" class="form-control" id="pwd">
+    					<input type="password" class="form-control" name="pwd">
   					</div>
 					<div class="form-group">
     					<label for="pwd">Confirm Password:</label>
-    					<input type="password" class="form-control" id="pwd">
+    					<input type="password" class="form-control" name ="pwd">
   					</div>
   					<button type="submit" class="btn btn-default">Submit</button>
 				</form>
