--- a/descrip.html
+++ b/descrip.html
@@ -1,65 +1,110 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <title>Hollandia Volunteer Scheduler</title>
-
-	<link rel="stylesheet" href="main.css" />
-	<link rel="stylesheet" href="signup.css" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--<link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet">-->
-
-  <!--<link href="http://getbootstrap.com/examples/jumbotron-narrow/jumbotron-narrow.css" rel="stylesheet">-->
-
- </head>
+	<title>Hollandia Volunt-EZ</title>
+	
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+	<link rel="stylesheet" href="/css/main.css" />
+	<link rel="stylesheet" href="/css/hdr_ftr.css" />
+	
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+	
 <body>
-
-    <div id="contain">
+	<div class="container-fluid" id="contain">
 		<div id="hdr">
-		<div id="social"><a href="https://www.facebook.com/hollandiasoccer" target="_blank"><img src="img/fb.png" /></a><a href="https://www.instagram.com/hollandiasoccer/" target="_blank"><img src="img/ig.png" ></a><a href="https://www.youtube.com/channel/UCeyZXkqKTUyNs0S_tCL9QFw" target="_blank"><img src="img/yt.png" ></a><a href="https://twitter.com/HollandiaSoccer" target="_blank"><img src="img/tw.png" ></a></div>
+			<div id="social">
+				<a href="https://www.facebook.com/hollandiasoccer" target="_blank">			
+					<img src="img/fb.png" />
+				</a>
+				<a href="https://www.instagram.com/hollandiasoccer/" target="_blank">		
+					<img src="img/ig.png" >
+				</a>
+				<a href="https://www.youtube.com/channel/UCeyZXkqKTUyNs0S_tCL9QFw" target="_blank">
+					<img src="img/yt.png" >
+				</a>
+				<a href="https://twitter.com/HollandiaSoccer" target="_blank">
+					<img src="img/tw.png" >
+				</a>
+			</div>
 		</div>
-
-		<div id="main-content" style="height:800px;">
-			<h1 align="left"> Position Name </h1>
-			<h3>Time: 9:30am - 12:30pm | Location: Blairmore</h3>
-			<div class="availd">2 Shifts Available</div>
-			<div style="width:600px; float:left;">
-				<h2> Description </h2>
-				<div>
+		
+		<div class="row" id="Main">
+			<div class="col-sm-6">
+				<h1> Position Name </h1>
+				<h3>Time: 9:30am - 12:30pm | Location: Blairmore</h3>
+				<div class="availd">2 Shifts Available</div>
+				<div style="width:600px; float:left;">
+				<h2 align="left"> Description </h2>
+				<div id="description">
 				This is where the description goes. It can be as wordy or brief as needed. It would be good to have a 'shift type' field of some sort that the shifts can be linked to, then the organizer only has to upload one description per type and it will populate for each shift of that type.
 				</div>
 			</div>
-			<div style="width:600px; float:right;">
-				<h2> Sign Up </h2>
-				<div>
-				<h3>First Name</h3>
-				<h3>Last Name</h3>
-				<h3>Phone Number</h3>
-				<h3>Email Address</h3>
-				<h3>Team Name</h3>
-				<h3>Team Age Group</h3>
-				<button class="button"> Sign Up </button>
-				</div>
 			</div>
-			
-       
-      </div>
-	 
-
-
-	<div id="ftr">
-        <center>
-        	<div id="mob-social"><a href="https://www.facebook.com/hollandiasoccer" target="_blank"><img src="img/fb.png" /></a><a href="https://twitter.com/HollandiaSoccer" target="_blank"><img src="img/tw.png" ></a><a href="https://www.instagram.com/hollandiasoccer/" target="_blank"><img src="img/ig.png" ></a><a href="https://www.youtube.com/channel/UCeyZXkqKTUyNs0S_tCL9QFw" target="_blank"><img src="img/yt.png" ></a></div>
-			<p><strong>Purpose</strong>: <em>Enhancing our community by inspiring people to enrich their lives through soccer</em><br />
-			<strong>Mission</strong>: <em>To inspire players, parents, and coaches to be passionate about soccer and to reach their full potential through player-centric programs</em><br />
-            <strong>Vision</strong>: <em>Hollandia will be the club of choice, building community and a membership which commits to behavior consistent with our values</em></p>
-        <? include("menu_ftr.php"); ?>
-        <p><span>Copyright Hollandia Soccer Club &copy; <? echo date("Y"); ?>  All Rights Reserved.</span></p>
-        </center>
-
+			<div class="col-sm-6" id="volInfo">
+				<form class="form-horizontal">
+  					<div class="form-group">
+    					<label class="control-label col-sm-3" for="name">First Name:</label>
+    					<div class="col-sm-9">
+      						<input type="name" class="form-control" id="shift_sign_up" placeholder="First Name">
+    					</div>
+  					</div>
+					<div class="form-group">
+    					<label class="control-label col-sm-3" for="name">Last Name:</label>
+    					<div class="col-sm-9">
+      						<input type="name" class="form-control" id="shift_sign_up" placeholder="Last Name">
+    					</div>
+  					</div>
+					<div class="form-group">
+    					<label class="control-label col-sm-3" for="number">Phone Number:</label>
+    					<div class="col-sm-9">
+      						<input type="number" class="form-control" id="shift_sign_up" placeholder="Phone Number">
+    					</div>
+  					</div>
+					<div class="form-group">
+    					<label class="control-label col-sm-3" for="email">Email:</label>
+    					<div class="col-sm-9">
+      						<input type="email" class="form-control" id="shift_sign_up" placeholder="Email Address">
+    					</div>
+  					</div>
+					<div class="form-group">
+    					<label class="control-label col-sm-3" for="name">Team Name:</label>
+    					<div class="col-sm-9">
+      						<input type="name" class="form-control" id="shift_sign_up" placeholder="Team Name">
+    					</div>
+  					</div>
+					<div class="form-group">
+    					<label class="control-label col-sm-3" for="number">Team Age Group:</label>
+    					<div class="col-sm-9">
+      						<input type="number" class="form-control" id="shift_sign_up" placeholder="Team Age Group">
+    					</div>
+  					</div>
+  					<div class="form-group"> 
+    					<div class="col-sm-offset-3 col-sm-9">
+      						<button type="submit" class="btn btn-default">Submit</button>
+    					</div>
+  					</div>
+				</form>
+			</div>
+		</div>
+		
+		<div class="col-sm-12" id="ftr">
+        	<center>
+        		<div id="mob-social">
+					<a href="https://www.facebook.com/hollandiasoccer" target="_blank"><img src="img/fb.png" /></a><a href="https://twitter.com/HollandiaSoccer" target="_blank"><img src="img/tw.png" ></a><a href="https://www.instagram.com/hollandiasoccer/" target="_blank"><img src="img/ig.png" ></a><a href="https://www.youtube.com/channel/UCeyZXkqKTUyNs0S_tCL9QFw" target="_blank"><img src="img/yt.png" ></a>
+				</div>
+				<p>
+					<strong>Purpose</strong>: <em>Enhancing our community by inspiring people to enrich their lives through soccer</em><br />
+					<strong>Mission</strong>: <em>To inspire players, parents, and coaches to be passionate about soccer and to reach their full potential through player-centric programs</em><br />
+            		<strong>Vision</strong>: <em>Hollandia will be the club of choice, building community and a membership which commits to behavior consistent with our values</em>
+				</p>
+        	<p><span>Copyright Hollandia Soccer Club; <? echo date("Y"); ?>  	All Rights Reserved.</span></p>
+        	</center>
+		</div>
 	</div>
-</div>
-
 </body>
-
 </html>
