--- a/signUp.html
+++ b/signUp.html
@@ -40,7 +40,7 @@
 			</div>
   			<div class="col-sm-4">
 				<h1>Sign Up Today!</h1>
-				<form >
+				<form name = "submit" method ="post" action = "addUser.php" >
 					<div class="form-group">
     					<label for="pwd">First Name:</label>
     					<input type="name" class="form-control" name ="firstName">
